search form changes. Rouble label looks shitty.

--- a/app/views/advertisements/_locations.html.slim
+++ b/app/views/advertisements/_locations.html.slim
@@ -1,7 +1,7 @@
 .form.form-horizontal role="form"
   .form-group
     label.col-sm-3.control-label for='advertisement[location_ids][]'
-      i.fa.fa-map-marker.fa-lg
+      i.fa.fa-globe.fa-lg
       '
       | местоположение
       input type="hidden" name="location_validation"
