--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -72,7 +72,7 @@
           = hidden_field_tag 'advertisement[location_ids][]', location.id
       .form-group
         label
-          i.fa.fa-map-marker.fa-lg
+          i.fa.fa-globe.fa-lg
         '
         .form-group.location-group.btn-group multi='true' editable='false' state="#{@location_state}"
           .btn.btn-default.GetChildren.dropdown-toggle lid="#{0}" data-toggle="dropdown"
@@ -106,7 +106,7 @@
           '
     .row
       .col-md-10.col-sm-9.col-xs-12.additional_search_params_container_action
-        = render 'advertisements/additional_search_params'
+        = render_price_input
         .form-group
           label
             i.fa.fa-search
@@ -127,6 +127,7 @@
                 '
                 input type="checkbox" name="advertisement[expired]" value="1" checked=(params[:advertisement][:expired]=='1')
                 = t("advertisement.attributes.expired")
+        = render 'advertisements/additional_search_params'
 
       .col-md-2.col-sm-3.col-xs-12
         button.btn.btn-primary.btn-lg.btn-block type="submit"
