--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -12,7 +12,18 @@ h2
         .col-sm-4.col-sm-offset-4
           .form-group
             .input-group
-              = f.submit 'Сохранить', class: 'btn btn-primary btn-lg'
+              = f.button  class: 'btn btn-primary btn-lg' do
+                i.fa.fa-save.fa-lg
+                '
+                |Сохранить
+      .form-group
+        .col-sm-4.col-sm-offset-4
+          .form-group
+            .input-group
+              =link_to registration_path(resource_name), method: :delete do
+                i.fa.fa-user-times
+                  '
+                  | Удалить учетную запись
 .phone-target-field value="user[phones_attributes]"
 
 /.well.clearfix
