--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -20,7 +20,8 @@ h2
         .col-sm-4.col-sm-offset-4
           .form-group
             .input-group
-              =link_to registration_path(resource_name), method: :delete do
+              /=link_to registration_path(resource_name), method: :delete do
+              = link_to '#' do
                 i.fa.fa-user-times
                   '
                   | Удалить учетную запись
