--- a/app/views/advertisements/get_locations.js.erb
+++ b/app/views/advertisements/get_locations.js.erb
@@ -5,7 +5,7 @@ el.popover({
     placement: 'bottom'
 }).popover("show");
 
-el.find('input[type="text"]').focus();
+el.find('input[type="text"]:first').focus();
 $('.popover:first').css('width', $('.popover').width());
 if (el.closest('.location-group').attr('editable') === 'true') {
     $('.search-or-create-location-container-action').removeClass('hidden');
