--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -106,13 +106,15 @@
           '
     .row
       .col-md-10.col-sm-9.col-xs-12.additional_search_params_container_action
-        = render_price_input
+        = render_search_input('price_from')
+        '
+        = render_search_input('owner')
         .form-group
           label
             i.fa.fa-search
           '
           input.text-input name="advertisement[description]" value=params[:advertisement][:description] placeholder=" поиск по тексту или №" type="text"
-        '
+
         .form-group
           label
             i.fa.fa-calendar
