--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -23,9 +23,9 @@
 
 
         a href="#{advertisement_path(adv)}-#{adv.url}"
-          .col-lg-2.col-md-2.col-sm-3.col-xs-12
+          .col-lg-2.col-md-2.col-sm-3.col-xs-12 style="overflow: hidden;"
             - if adv.preview_url.present?
-              img src=adv.preview_url alt=adv.preview_alt style="overflow: hidden;height: 90px;"
+              img src=adv.preview_url alt=adv.preview_alt style="height: 90px;"
             -else
               img src="#{image_path('empty_preview.png')}" style="width: 145px;height: 90px;"
 
