--- a/app/views/advertisements/_photos_block.html.slim
+++ b/app/views/advertisements/_photos_block.html.slim
@@ -6,7 +6,7 @@
         '
         | фото
       .help-block.muted.small оптимально выглядят горизонтально ориентированые снимки
-    .row.col-sm-9
+    .col-sm-9
       .fileupload_context
         span.btn.btn-default.fileinput-button
           i.i.fa.fa-plus
