--- a/app/views/devise/registrations/_fields.html.slim
+++ b/app/views/devise/registrations/_fields.html.slim
@@ -1,35 +1,3 @@
-- if f.object.new_record?
-  .form-group
-    label.control-label.col-sm-3 for="radios"
-    .col-sm-4
-      - (AdvEnums::USER_ROLES - [:admin]).each_with_index  do |role, index|
-        = f.label :role, class: 'radio-inline', for: "advertisement_user_attributes_role_#{role}" do
-          = f.radio_button :role, role.to_sym, required: true, id: "advertisement_user_attributes_role_#{role}"
-          = render_icon(role.to_sym)
-          '
-          = t "activerecord.attributes.user.roles.#{role}"
-
-.form-group
-  label.control-label.col-sm-3 for="textinput"
-    i.fa.fa-user
-    '
-    | имя
-  .col-sm-4
-    = f.text_field :name, autofocus: true, class: 'form-control', required: true, placeholder: 'Имя'
-.form-group
-  label.control-label.col-sm-3
-    i.fa.fa-phone
-    '
-    | телефон
-  .col-sm-4#reg-phones
-    = f.fields_for :phones, (f.object.phones.presence || f.object.phones.build) do |phone_form|
-      .input-group
-        = phone_form.text_field :original, class: "form-control#{check_phone ? ' checkPhone': ''}", required: true, placeholder: '+7(863) 2-12-85-06'
-        span.input-group-btn
-          = phone_form.link_to_remove class: 'btn btn-default dell-phone-number ' do
-            i.fa.fa-minus
-          = f.link_to_add :phones, :data => { :target => "#reg-phones" }, class: 'btn btn-default add-phone-number hidden' do
-            i.fa.fa-plus
 .form-group
   label.control-label.col-sm-3
     i.fa.fa-envelope-o
@@ -37,11 +5,8 @@
     | почта
   .col-sm-4
     = f.email_field :email, class: 'form-control', required: true, placeholder: 'mail@example.com'
-
 - if additional_params
   - if (f.object.new_record? && !can?(:create_from_admin, f.object))
-
-
     .form-group
       label.control-label.col-sm-3
         i.fa.fa-unlock
@@ -57,3 +22,38 @@
         | подтверждение пароля
       .col-sm-4
         = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', required: true, placeholder: '******', minlength: 6
+.form-group
+  label.control-label.col-sm-3
+    i.fa.fa-phone
+    '
+    | телефон
+  .col-sm-4#reg-phones
+    = f.fields_for :phones, (f.object.phones.presence || f.object.phones.build) do |phone_form|
+      .input-group
+        = phone_form.text_field :original, class: "form-control#{check_phone ? ' checkPhone': ''}", required: true, placeholder: '+7(863) 2-12-85-06'
+        span.input-group-btn
+          = phone_form.link_to_remove class: 'btn btn-default dell-phone-number ' do
+            i.fa.fa-minus
+          = f.link_to_add :phones, :data => { :target => "#reg-phones" }, class: 'btn btn-default add-phone-number hidden' do
+            i.fa.fa-plus
+.form-group
+  label.control-label.col-sm-3 for="textinput"
+    i.fa.fa-user
+    '
+    | имя
+  .col-sm-4
+    = f.text_field :name, class: 'form-control', required: true, placeholder: 'Имя'
+- if f.object.new_record?
+  .form-group
+    label.control-label.col-sm-3 for="radios"
+    .col-sm-4
+      - (AdvEnums::USER_ROLES - [:admin]).each_with_index  do |role, index|
+        = f.label :role, class: 'radio-inline', for: "advertisement_user_attributes_role_#{role}" do
+          = f.radio_button :role, role.to_sym, required: true, id: "advertisement_user_attributes_role_#{role}"
+          = render_icon(role.to_sym)
+          '
+          = t "activerecord.attributes.user.roles.#{role}"
+
+
+
+
