--- a/app/views/advertisements/get_locations.js.erb
+++ b/app/views/advertisements/get_locations.js.erb
@@ -4,6 +4,7 @@ el.popover({
     html: true,
     placement: 'bottom'
 }).popover("show");
+el.addClass('active');
 
 //el.find('input[type="text"]:first').focus();
 $('.popover:first').css('width', $('.popover').width());
