--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -11,12 +11,7 @@ h2
         /.col-md-3
         = f.label :password, "Новый пароль", class: 'control-label col-sm-3'
         .col-sm-4
-          = f.password_field :password, autofocus: true, autocomplete: "off", class: 'form-control'
-      .form-group
-        /.col-md-3
-        = f.label :password_confirmation, "Еще раз новый пароль", class: 'control-label col-sm-3'
-        .col-sm-4
-          = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
+          = f.password_field :password, autofocus: true, autocomplete: "off", class: 'form-control', type: 'text'
       .form-group
         .col-sm-3
         .col-sm-4
