--- a/app/views/rails_admin/main/abuses.html.slim
+++ b/app/views/rails_admin/main/abuses.html.slim
@@ -33,52 +33,54 @@ table.table.table-bordered
   - @objects= Abuse.where('status > 0') if params[:old].present?
   - @objects.each do |abuse|
     = form_for abuse, url: "/abuses/#{abuse.id}", method: :patch do |f|
-      - if abuse.user.present?
-        = f.hidden_field :status, id: 'abuse-status'
-        tr
-          td
-            = abuse.created_at.strftime('%R')
-            br
-            = abuse.created_at.strftime('%m/%d/%Y')
-          td= abuse.status
-          td= abuse.abuse_type
-          td= f.text_area :moderator_comment, disabled: params[:old].present?
-          /td=abuse.moderator_comment
-          td= abuse.comment
-          td
+      = f.hidden_field :status, id: 'abuse-status'
+      tr
+        td
+          = abuse.created_at.strftime('%R')
+          br
+          = abuse.created_at.strftime('%m/%d/%Y')
+        td= abuse.status
+        td= abuse.abuse_type
+        td= f.text_area :moderator_comment, disabled: params[:old].present?
+        /td=abuse.moderator_comment
+        td= abuse.comment
+        td
+          - if abuse.user.present?
             = link_to abuse.user.name, rails_admin.show_path(model_name: :user, id: abuse.user_id)
-          td.col-md-3
-            -adv = abuse.advertisement
-            a href="#{rails_admin.show_path(model_name: :advertisement, id: adv.id)}"
-              /.col-lg-2.col-md-2.col-sm-3.col-xs-12
-                - if adv.preview_url.present?
-                  img src=adv.preview_url alt=adv.preview_alt style="width: 145px;height: 90px;"
-                -else
-                  img src="#{image_path('empty_preview.png')}" style="width: 145px;height: 90px;"
+          - else
+            | Нет пользователя
+        td.col-md-3
+          -adv = abuse.advertisement
+          a href="#{rails_admin.show_path(model_name: :advertisement, id: adv.id)}"
+            /.col-lg-2.col-md-2.col-sm-3.col-xs-12
+              - if adv.preview_url.present?
+                img src=adv.preview_url alt=adv.preview_alt style="width: 145px;height: 90px;"
+              -else
+                img src="#{image_path('empty_preview.png')}" style="width: 145px;height: 90px;"
 
-              /.col-lg-5.col-md-6.col-sm-9.col-xs-12
-              div
-                h4.media-heading
-                  = adv.anchor
-                - if adv.price_from.present?
-                  span.lead
-                    span.formatRub
-                      = adv.price_from
-                    - if adv.price_to.present? && adv.price_to != adv.price_from
-                      '
-                      | -
-                      '
-                      span.formatRub
-                        = adv.price_to
+            /.col-lg-5.col-md-6.col-sm-9.col-xs-12
+            div
+              h4.media-heading
+                = adv.anchor
+              - if adv.price_from.present?
+                span.lead
+                  span.formatRub
+                    = adv.price_from
+                  - if adv.price_to.present? && adv.price_to != adv.price_from
                     '
-                    i.fa.fa-rub
-                - if adv.locations_title.present?
-                  br
-                    span
-                      = adv.locations_title[0..15]
+                    | -
+                    '
+                    span.formatRub
+                      = adv.price_to
+                  '
+                  i.fa.fa-rub
+              - if adv.locations_title.present?
+                br
+                  span
+                    = adv.locations_title[0..15]
 
-          - if params[:old].blank?
-            td
-              = f.submit t('admin.actions.accept.link'),class: 'btn btn-success', onclick: '$("#abuse-status").val(1)'
-              '
-              = f.submit t('admin.actions.decline.link'),class: 'btn btn-danger', onclick: '$("#abuse-status").val(2)'
+        - if params[:old].blank?
+          td
+            = f.submit t('admin.actions.accept.link'),class: 'btn btn-success', onclick: '$("#abuse-status").val(1)'
+            '
+            = f.submit t('admin.actions.decline.link'),class: 'btn btn-danger', onclick: '$("#abuse-status").val(2)'
