--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -85,6 +85,13 @@ h2 {
   right: -35px;
 }
 
+.form-horizontal .has-feedback .form-control-feedback[data-fv-icon-for="user[role]"],
+{
+  right: -35px;
+}
+
+
+
 .form-horizontal .has-feedback #reg-phones .form-control-feedback
 {
   right: 50px;
