--- a/app/views/devise/registrations/_edit_fields.html.slim
+++ b/app/views/devise/registrations/_edit_fields.html.slim
@@ -16,7 +16,7 @@
   .col-sm-4
     = f.text_field :name, autofocus: true, class: 'form-control', required: true, placeholder: 'Имя'
 .form-group
-  label.control-label.col-sm-3
+  label.control-label.col-sm-3 for='reg-phones'
     i.fa.fa-phone
     '
     | телефон
