--- a/app/views/devise/registrations/_fields.html.slim
+++ b/app/views/devise/registrations/_fields.html.slim
@@ -1,5 +1,5 @@
 .form-group
-  label.control-label.col-sm-3
+  label.control-label.col-sm-2
     i.fa.fa-envelope-o
     '
     | почта
@@ -8,7 +8,7 @@
 - if additional_params
   - if (f.object.new_record? && !can?(:create_from_admin, f.object))
     .form-group
-      label.control-label.col-sm-3
+      label.control-label.col-sm-2
         i.fa.fa-unlock
         '
         | пароль
@@ -16,7 +16,7 @@
       .col-sm-4
         = f.password_field :password, autocomplete: "off", class: 'form-control', required: true, placeholder: '******', minlength: 6, type: 'text'
 .form-group
-  label.control-label.col-sm-3
+  label.control-label.col-sm-2 for='reg-phones'
     i.fa.fa-phone
     '
     | телефон
@@ -30,7 +30,7 @@
           = f.link_to_add :phones, :data => { :target => "#reg-phones" }, class: 'btn btn-default add-phone-number hidden' do
             i.fa.fa-plus
 .form-group
-  label.control-label.col-sm-3 for="textinput"
+  label.control-label.col-sm-2 for="textinput"
     i.fa.fa-user
     '
     | имя
@@ -38,7 +38,7 @@
     = f.text_field :name, class: 'form-control', required: true, placeholder: 'Имя'
 - if f.object.new_record?
   .form-group
-    label.control-label.col-sm-3 for="radios"
+    label.control-label.col-sm-2 for="radios"
     .col-sm-4
       - (AdvEnums::USER_ROLES - [:admin]).each_with_index  do |role, index|
         = f.label :role, class: 'radio-inline', for: "advertisement_user_attributes_role_#{role}" do
