--- a/app/views/devise/registrations/_fields.html.slim
+++ b/app/views/devise/registrations/_fields.html.slim
@@ -1,6 +1,6 @@
 .form-group
   label.control-label.col-sm-3
-    i.fa.fa-envelope-o
+    i.fa.fa-at
     '
     | почта
   .col-sm-4
@@ -9,15 +9,15 @@
   - if (f.object.new_record? && !can?(:create_from_admin, f.object))
     .form-group
       label.control-label.col-sm-3
-        i.fa.fa-unlock
+        i.fa.fa-lock
         '
         | пароль
       -
       .col-sm-4
-        = f.password_field :password, autocomplete: "off", class: 'form-control', required: true, placeholder: '******', minlength: 6, type: 'text'
+        = f.password_field :password, autocomplete: "off", class: 'form-control', required: true, placeholder: '******', minlength: 6
 .form-group
   label.control-label.col-sm-3
-    i.fa.fa-phone
+    i.fa.fa-mobile
     '
     | телефон
   .col-sm-4#reg-phones
