--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -1,25 +1,32 @@
-h2
-  |Смена Вашего пароля
+=content_for :title
+  |Новый пароль
+h1
+  |Новый пароль
 
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-  /= devise_error_messages!
-  = render_model_errors resource
-  = f.hidden_field :reset_password_token
-  fieldset
-    .form.form-horizontal
-      .form-group
-        /.col-md-3
-        = f.label :password, "Новый пароль", class: 'control-label col-sm-3'
-        .col-sm-4
-          = f.password_field :password, autofocus: true, autocomplete: "off", class: 'form-control', type: 'text'
-      .form-group
-        .col-sm-3
-        .col-sm-4
-          = f.button class: 'btn btn-lg btn-primary' do
-            i.fa.fa-refresh
+.well
+  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+
+    /= devise_error_messages!
+    = render_model_errors resource
+    = f.hidden_field :reset_password_token
+    fieldset
+      .form.form-horizontal
+        .form-group
+          /.col-md-3
+          label.control-label.col-sm-3
+            i.fa.fa-lock
             '
-            |Изменить
-      .form-group
+            | Новый пароль
+          .col-sm-4
+            = f.password_field :password, autofocus: true, autocomplete: "off", class: 'form-control', type: 'text'
+        .form-group
+          .col-sm-3
+          .col-sm-4
+            = f.button class: 'btn btn-lg btn-primary' do
+              i.fa.fa-refresh
+              '
+              |Изменить
+      /.form-group
         .col-sm-3
           br
         .col-sm-4
