--- a/app/views/devise/shared/_flash.html.slim
+++ b/app/views/devise/shared/_flash.html.slim
@@ -2,4 +2,4 @@
   p
     .flash-messages
       -flash.each do |key, value|
-        =content_tag :div, value, class: "flash #{key == 'error' ? "alert-danger" : "alert-info" }"
+        =content_tag :div, value, class: "flash alert #{key == 'error' ? "alert-danger" : "alert-info" }"
