--- a/app/views/devise/registrations/_edit_fields.html.slim
+++ b/app/views/devise/registrations/_edit_fields.html.slim
@@ -17,7 +17,7 @@
     = f.text_field :name, autofocus: true, class: 'form-control', required: true, placeholder: 'Имя'
 .form-group
   label.control-label.col-sm-3
-    i.fa.fa-phone
+    i.fa.fa-mobile
     '
     | телефон
   .col-sm-4#reg-phones
@@ -33,7 +33,7 @@
 
 .form-group
   label.control-label.col-sm-3
-    i.fa.fa-envelope-o
+    i.fa.fa-at
     '
     | почта
   .col-sm-4
@@ -41,12 +41,12 @@
 
 .form-group
   label.control-label.col-sm-3
-    i.fa.fa-unlock
+    i.fa.fa-lock
     '
     | новый пароль
 
   .col-sm-4
-    = f.password_field :password, autocomplete: "off", class: 'form-control', required:  false, placeholder: '******', minlength: 6, type: 'text'
+    = f.password_field :password, autocomplete: "off", class: 'form-control', required:  false, placeholder: '******', minlength: 6
 
 .form-group
   label.control-label.col-sm-3
@@ -54,4 +54,4 @@
     '
     | текущий пароль
   .col-sm-4
-    = f.password_field :current_password, autocomplete: "off", class: 'form-control', required: true, placeholder: '******', minlength: 6, type: 'text'
+    = f.password_field :current_password, autocomplete: "off", class: 'form-control', required: true, placeholder: '******', minlength: 6
