--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -75,7 +75,7 @@
           i.fa.fa-globe.fa-lg
         '
         .form-group.location-group.btn-group multi='true' editable='false' state="#{@location_state}"
-          .btn.btn-default.GetChildren.dropdown-toggle lid="#{0}" data-toggle="dropdown"
+          .btn.btn-default.GetChildren.dropdown-toggle.yaSend yaparam="root_place_selector_press" lid="#{0}" data-toggle="dropdown"
             b
               | местоположение
               '
@@ -142,7 +142,7 @@
         = render 'advertisements/additional_search_params'
 
       .col-md-2.col-sm-3.col-xs-12
-        button.btn.btn-primary.btn-lg.btn-block type="submit"
+        button.btn.btn-primary.btn-lg.btn-block.yaSend yaparam="search" type="submit"
           i.fa.fa-search.fa-lg
           '
           | Найти
