--- a/app/views/advertisements/show_blocks/_edit_btns.html.slim
+++ b/app/views/advertisements/show_blocks/_edit_btns.html.slim
@@ -4,7 +4,7 @@
     '
     | редактировать
   '
-  a.btn.btn-default.btn-xs href=top_advertisement_path(@adv.id) data-remote=true
+  a.btn.btn-default.btn-xs.yaSend href=top_advertisement_path(@adv.id) data-remote=true yaparam="entity_renew_full"
     i.fa.fa-level-up
     '
     | обновить
