--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -10,7 +10,7 @@ header
       .form-group
         .col-sm-3
         .col-sm-4
-          = f.button  class: 'btn btn-primary btn-lg'
+          = f.button  class: 'btn btn-primary btn-lg yaSend', yaparam="register"
             i.fa.fa-user-plus.fa-lg
             '
             | Зарегистрироваться
