--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -22,7 +22,7 @@
                   i.fa.fa-trash.fa-lg
 
 
-        a href="#{advertisement_path(adv)}-#{adv.url}"
+        a href="#{advertisement_path(adv)}-#{adv.url}" class="#{"yaSend" if params[:id].present? && current_page?(advertisement_path(params[:id]))}" yaparam="click_to_simular"
           .col-lg-2.col-md-2.col-sm-3.col-xs-12 style="overflow: hidden;"
             - if adv.preview_url.present?
               img src=adv.preview_url alt=adv.preview_alt style="height: 90px;"
