--- a/app/views/advertisements/_photos_block.html.slim
+++ b/app/views/advertisements/_photos_block.html.slim
@@ -11,7 +11,7 @@
         span.btn.btn-success.fileinput-button
           i.i.fa.fa-image
           '
-          span добавить фото
+          span добавить
           = file_field_tag 'advertisement_photo[]', multiple: true
         .form.form-horizontal
           .col-sm-9
