--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -4,5 +4,5 @@
 
 <p><%= link_to 'Сменить мой пароль на новый', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>Если Вы не отпавляли запрос на смену пароля, пожалуйста, проигнорируйте это сообщение.</p>
+<p>Если Вы не отправляли запрос на смену пароля, пожалуйста, проигнорируйте это сообщение.</p>
 <p>Ваш пароль не изменится до тех пор, пока вы не перейдете по ссылке выше.</p>
