--- a/app/views/devise/registrations/_edit_fields.html.slim
+++ b/app/views/devise/registrations/_edit_fields.html.slim
@@ -17,7 +17,7 @@
     = f.text_field :name, autofocus: true, class: 'form-control', required: true, placeholder: 'Имя'
 .form-group
   label.control-label.col-sm-3 for='reg-phones'
-    i.fa.fa-phone
+    i.fa.fa-mobile
     '
     | телефон
   .col-sm-4#reg-phones
@@ -50,7 +50,7 @@
 
 .form-group
   label.control-label.col-sm-3
-    i.fa.fa-unlock
+    i.fa.fa-lock
     '
     | текущий пароль
   .col-sm-4
