--- a/app/views/cabinet/edit.html.slim
+++ b/app/views/cabinet/edit.html.slim
@@ -1,3 +1,5 @@
+= content_for :title
+  | Удалить профиль
 h1
   | Удалить профиль
 
@@ -13,7 +15,7 @@ h1
           label.control-label.col-md-3
             i.fa.fa-lock
             '
-            | Пароль
+            | пароль
           .col-md-4
             = password_field_tag :password, nil, class: 'form-control', required: true
         .form-group
