--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -16,7 +16,7 @@ h1
           label.control-label.col-sm-3
             i.fa.fa-lock
             '
-            | Новый пароль
+            | новый пароль
           .col-sm-4
             = f.password_field :password, autofocus: true, autocomplete: "off", class: 'form-control', type: 'text'
         .form-group
