--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -1,7 +1,6 @@
 .well.well-sm
   = form_tag root_path, method: :get, class: 'form form-inline withoutBootstrapValidator', role:'form'
-    /What a hell with this css??
-    .row.col-xs-12.control_show_action.hidden
+    .row.col-xs-12
       .form-group
         label
           i.fa.fa-share.fa-lg
@@ -50,7 +49,7 @@
               input type="checkbox" name="advertisement[category][]" value="#{AdvEnums::CATEGORIES.index(category)}" checked=active = t("advertisement.category.#{category}")
 
 
-    .row.col-xs-12.form-group.control_show_action.hidden
+    .row.col-xs-12.form-group
       .control_remove_action
         - @locations.each do |location|
           = hidden_field_tag 'advertisement[location_ids][]', location.id
