search form fixes.

--- a/app/views/advertisements/new.html.slim
+++ b/app/views/advertisements/new.html.slim
@@ -1,6 +1,6 @@
 = content_for :title
   - if @adv.new_record?
-    | Дать бесплатное объявление на доску недвижимости
+    | Дать бесплатное объявление на сайт базы недвижимости Мультилистинг су
   - else
     | Редактирование объявления
 
