--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -55,14 +55,15 @@
           = hidden_field_tag 'advertisement[location_ids][]', location.id
       .form-group
         label
-          i.fa.fa-globe.fa-lg
+          | местоположение
         '
         .form-group.location-group.btn-group multi='true' editable='false' state="#{@location_state}"
           .btn.btn-default.GetChildren.dropdown-toggle.yaSend yaparam="root_place_selector_press" lid="#{0}" data-toggle="dropdown"
-            b
-              | местоположение
-              '
-              i.caret
+            i.fa.fa-globe
+            '
+            i.caret
+          .btn.btn-default.disabled
+            i.fa.fa-times
     .last-selected-location lid=""
 
     .row
