--- a/app/views/advertisements/_popover_locations.html.slim
+++ b/app/views/advertisements/_popover_locations.html.slim
@@ -3,6 +3,7 @@
     - condition = %w(address street cottage garden complex non_admin_area).include?(key) && (can?(:manage, Location) || params[:editable] == 'true')
     - if value.present? || condition
       .row.form-horizontal
+        .validation-error-messages
         .col-md-1
           label for=key
             = t("activerecord.attributes.location.#{key}")
